<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Task Manager</string>
    <string name="Login">E-mail</string>
    <string name="Password">Password</string>
    <string name="bnt_entry">Entry</string>
    <string name="ForgotPassword">Forgot password</string>
    <string name="Register">I don\'t have an account.</string>
    <string name="image_para_login">Image login</string>
    <string name="taskTittle">Tasks</string>
    <string name="profileTittle">Profile</string>
    <string name="registerTittle">Register</string>
    <string name="frgPassTittle">Recovery Password</string>
    <string name="ETask">Edit task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_pass">Password cannot be empty</string>
    <string name="very_short_pass">"Password not sholud be less than 6 characters"</string>
    <string name="weake_pass">Weak password</string>
    <string name="commom_pass">Common password</string>
    <string name="strong_pass">Strong password</string>
    <string name="very_strong_pass">Very strong password</string>
    <string name="very_weake_pass">Very weak password</string>
    <string name="agreePassword">Agree password</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="emailRecovery">Recovery e-mail</string>
    <string name="btnSend">Send</string>
    <string name="btnSave">Save</string>
    <string name="subscribe">Sig on</string>
    <string name="noMatchPass">The passwords don\'t match..</string>
    <string name="subsSucess">Registration completed successfully</string>
    <string name="empty_email" >E\-mail cannot be empty</string>
    <string name="Task">Task</string>
    <string name="DescriptionTask">Task description</string>
    <string name="nOsubsSucess">Wrong of register.</string>
    <string name="Welcome">Welcome</string>
    <string name="linkRecovery">Recovery link sent</string>
    <string name="noUser">User not founded.</string>
    <string name="loding">Loading...</string>
    <string name="loadTaskFail">Error loading tasks.</string>
    <string name="deleteTask">Delete task?</string>
    <string name="mensegeDeleteTask">Are you sure you want to delete task?</string>
    <string name="confirmDeleteTask">Agree</string>
    <string name="sucessDeleteTask">Sucessfull remove task.</string>
    <string name="cancel">Cancel</string>
    <string name="permission_granted">Permission garanted.</string>
    <string name="permission_refused">Permission refused.</string>
    <string name="error_capturrImage">Error to capture image.</string>
    <string name="profile_saved">Profile saved.</string>
    <string name="name">Name</string>
    <string name="username">Username</string>

</resources>