<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

        <androidx.appcompat.widget.Toolbar
            app:title="@string/profileTittle"
            android:layout_marginTop="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logout_24px"
                android:layout_marginRight="8dp"
                android:layout_gravity="end"
              />

            <ImageView
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_24px"
                android:layout_gravity="end"
                android:layout_marginRight="16dp"
                />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_inputProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintTop_toBottomOf="@id/appBar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/menu"
            app:civ_border_width="3dp"
            app:civ_border_color="#FF000000"
            android:layout_gravity="center"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnCam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginLeft="60dp"
            android:src="@drawable/add_a_photo_24px"
            app:layout_anchor="@+id/profile_image"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnGalery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="-56dp"
            android:layout_marginRight="60dp"
            android:src="@drawable/photo_library_24px"
            app:layout_anchor="@+id/profile_image"
            />

        <EditText
            android:layout_marginTop="32dp"
            android:id="@+id/email"
            android:hint="@string/Login"
            android:layout_width="match_parent"
            android:enabled="false"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/username"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            style="@style/btn_entry"
        />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>