<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task_edit">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

        <androidx.appcompat.widget.Toolbar
            app:title="@string/ETask"
            android:layout_marginTop="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logout_24px"
                android:layout_marginRight="8dp"
                android:layout_gravity="end"
                />

            <ImageView
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_24px"
                android:layout_gravity="end"
                android:layout_marginRight="16dp"
                />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_inputProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:padding="32sp"
        app:layout_constraintTop_toBottomOf="@id/appBar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/taskTitle"
            android:hint="@string/Task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/descriptonTask"
            android:hint="@string/DescriptionTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_Pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:name="com.devmax.fragments.PickDate"
            tools:layout="@layout/fragment_pick_date"
            app:layout_constraintTop_toBottomOf="@+id/appBar_layout"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            style="@style/btn_entry"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>