<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

        <androidx.appcompat.widget.Toolbar
            app:title="@string/registerTittle"
            android:layout_marginTop="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logout_24px"
                android:layout_gravity="end"
            />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

<androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_input_register"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="32sp"
        app:layout_constraintTop_toBottomOf="@id/appBar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/singinEmail"
                android:hint="E-mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_gravity="top"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/singinPassword"
            android:name="com.devmax.fragments.PassDifficult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:passwordToggleEnabled="true"
            android:layout_gravity="top"
            app:layout_constraintTop_toBottomOf="@+id/singinEmail"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout="@layout/fragment_pass_difficult" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agreeSingPassword"
            android:hint="@string/agreePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="top"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnSingIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscribe"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            style="@style/btn_entry"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
